<resources>
    <!--app name-->
    <string name="app_name" translatable="false">Lyon City</string>
    <!--header-->
    <string name="welcome_to_lyon">Welcome to Lyon</string>
    <!--tabs title-->
    <string name="tab_home">home</string>
    <string name="tab_patrimony">patrimony</string>
    <string name="tab_museum">museum</string>
    <string name="tab_nature">nature</string>
    <!--image content description-->
    <string name="description_logo_of_lyon">logo of Lyon</string>
    <string name="description_back_home">back home</string>
    <string name="description_google_map">Google Map</string>
    <string name="description_web_access">web access</string>
    <string name="description_more_info">more info</string>
    <!--MapInfo Activity text-->
    <string name="find_and_go">Find and Go:</string>
    <string name="more_information">More information:</string>
    <string name="www_browse_the_web">www.browse the web</string>

    <!--Title objects-->
    <string name="home_title_01">Enjoy a guided tour</string>
    <string name="home_title_02">Have a break</string>
    <string name="home_title_03">Move your way</string>
    <string name="nature_title_01">Aquarium of Lyon</string>
    <string name="nature_title_02">Great Park Miribel Jonage</string>
    <string name="nature_title_03">Botanical garden of Lyon</string>
    <string name="nature_title_04">Park of Heights</string>
    <string name="nature_title_05">Park head gold</string>
    <string name="nature_title_06">Zoo of Lyon</string>
    <string name="nature_title_07">Palace Garden Saint-Pierre</string>
    <string name="nature_title_08">Sergeant Blandan Park</string>
    <string name="nature_title_09">Mini World Lyon</string>
    <string name="museum_title_01">Museum of Fine Arts of Lyon</string>
    <string name="museum_title_02">Museum of Confluences</string>
    <string name="museum_title_03">Museum of Contemporary Art of Lyon</string>
    <string name="museum_title_04">House of the Canuts</string>
    <string name="museum_title_05">Museums Gadagne</string>
    <string name="museum_title_06">Museum of Automata of old Lyon</string>
    <string name="museum_title_07">House of Chaos</string>
    <string name="museum_title_08">Lugdunum</string>
    <string name="museum_title_09">Museum of Fabrics and Decorative Arts</string>
    <string name="museum_title_10">Institute Light</string>
    <string name="museum_title_11">Center for the History of Resistance and Deportation</string>
    <string name="museum_title_12">Printing Museum</string>
    <string name="museum_title_13">Tony-Garnier Urban Museum</string>
    <string name="museum_title_14">Miniature Museum and Cinema</string>
    <string name="patrimony_title_01">Amphitheater of the Three Gauls</string>
    <string name="patrimony_title_02">Hotel Dieu of Lyon</string>
    <string name="patrimony_title_03">Fourvière metal lathe</string>
    <string name="patrimony_title_04">Old Lyon</string>
    <string name="patrimony_title_05">The Croix-Rousse</string>
    <string name="patrimony_title_06">Primatiale Saint-Jean of Lyon</string>
    <string name="patrimony_title_07">St. George\'s Church of Lyon</string>
    <string name="patrimony_title_08">Basilica of Our Lady of Fourviere</string>
    <string name="patrimony_title_09">Temple of the Change</string>
    <string name="patrimony_title_10">Saint-Nizier Church of Lyon</string>
    <string name="patrimony_title_11">Place Bellecour</string>
    <string name="patrimony_title_12">Prison Montluc</string>
    <string name="patrimony_title_13">Lyon City Hall</string>
    <string name="patrimony_title_14">Bartholdi Fountain</string>
    <string name="patrimony_title_15">Lyon Opera</string>
    <string name="patrimony_title_16">Fresco of the Canuts</string>
    <string name="patrimony_title_17">Fresco of Lyonnais</string>

    <!--Short description objects-->
    <string name="nature_desc_01">More than 5,000 fish from all over the world</string>
    <string name="nature_desc_02"><![CDATA[Large park, nature & sports activities]]></string>
    <string name="nature_desc_03">Garden and park</string>
    <string name="nature_desc_04">Park and garden</string>
    <string name="nature_desc_05">Large 19th century park with a lake</string>
    <string name="nature_desc_06">Zoo 150 years old, monkeys and zebras</string>
    <string name="nature_desc_07"><![CDATA[resting area ]]></string>
    <string name="nature_desc_08">public parc of 17 hectares</string>
    <string name="nature_desc_09">Parc et parc d\'attractions</string>
    <string name="museum_desc_01">Art and ancient and modern objects</string>
    <string name="museum_desc_02">Anthropology exhibition, modern building</string>
    <string name="museum_desc_03">Exhibitions of contemporary art and coffee</string>
    <string name="museum_desc_04">Exhibitions on the silk of the city</string>
    <string name="museum_desc_05">History of the city and puppets</string>
    <string name="museum_desc_06">Museum</string>
    <string name="museum_desc_07">Museum Contemporary Art Outdoor</string>
    <string name="museum_desc_08">Museum with Roman objects and antiquities</string>
    <string name="museum_desc_09">Museum of Fabrics and Decorative Arts</string>
    <string name="museum_desc_10">Museum and cinema with projections</string>
    <string name="museum_desc_11">Museum on the 2nd World War in Lyon</string>
    <string name="museum_desc_12">Museum, history of local printing</string>
    <string name="museum_desc_13">Murals, local architecture</string>
    <string name="museum_desc_14"><![CDATA[Miniature scenes & movie props]]></string>
    <string name="patrimony_desc_01">Roman Amphitheater of 19 AD</string>
    <string name="patrimony_desc_02">Old hospital bordering the river</string>
    <string name="patrimony_desc_03">Architecture</string>
    <string name="patrimony_desc_04">Architecture, renaissance, cathedral and history</string>
    <string name="patrimony_desc_05">Urban art, convent, weaving and garden</string>
    <string name="patrimony_desc_06">Cathedral with 14th century treasures</string>
    <string name="patrimony_desc_07">Church</string>
    <string name="patrimony_desc_08">High Church, Museum of Religious Art</string>
    <string name="patrimony_desc_09">Church and architecture</string>
    <string name="patrimony_desc_10">Gothic church with a rich heritage</string>
    <string name="patrimony_desc_11">Large pedestrian public square</string>
    <string name="patrimony_desc_12">History</string>
    <string name="patrimony_desc_13">Imposing historic site, city hall</string>
    <string name="patrimony_desc_14">Historic monument, famous sculptor</string>
    <string name="patrimony_desc_15">Opera, concert and architecture</string>
    <string name="patrimony_desc_16">Painting</string>
    <string name="patrimony_desc_17">Painting</string>

    <!--Web link objects-->
    <string name="home_web_01" translatable="false">https://www.visiterlyon.com/</string>
    <string name="home_web_02" translatable="false">https://www.heurebleue.fr/ou-sortir-a-lyon/</string>
    <string name="home_web_03" translatable="false">http://www.lyon-renaissance.com/se-deplacer-a-lyon/</string>
    <string name="nature_web_01" translatable="false">https://www.aquariumlyon.fr/</string>
    <string name="nature_web_02" translatable="false">https://www.grand-parc.fr/</string>
    <string name="nature_web_03" translatable="false">https://www.lyon-france.com/</string>
    <string name="nature_web_04" translatable="false">http://www.patrimoine-lyon.org/colline-de-fourviere/fourviere/le-parc-des-hauteurs</string>
    <string name="nature_web_05" translatable="false">http://www.loisirs-parcdelatetedor.com/</string>
    <string name="nature_web_06" translatable="false">http://www.zoo.lyon.fr/zoo/</string>
    <string name="nature_web_07" translatable="false">https://www.ruesdelyon.net/jardin/131-jardin-du-palais-saint-pierre.html-</string>
    <string name="nature_web_08" translatable="false">https://www.grandlyon.com/a-vivre/parc-blandan.html</string>
    <string name="nature_web_09" translatable="false">https://miniworldlyon.com/</string>
    <string name="museum_web_01" translatable="false">http://www.mba-lyon.fr/mba/</string>
    <string name="museum_web_02" translatable="false">http://www.museedesconfluences.fr/</string>
    <string name="museum_web_03" translatable="false">http://www.mac-lyon.com/mac/</string>
    <string name="museum_web_04" translatable="false">http://maisondescanuts.com/</string>
    <string name="museum_web_05" translatable="false">http://www.gadagne.musees.lyon.fr/</string>
    <string name="museum_web_06" translatable="false">https://www.museeautomates.com/</string>
    <string name="museum_web_07" translatable="false">http://www.organe.org/</string>
    <string name="museum_web_08" translatable="false">http://www.museegalloromain.grandlyon.com/</string>
    <string name="museum_web_09" translatable="false">http://www.mtmad.fr/fr/Pages/default.aspx</string>
    <string name="museum_web_10" translatable="false">http://www.institut-lumiere.org/</string>
    <string name="museum_web_11" translatable="false">http://www.chrd.lyon.fr/chrd/</string>
    <string name="museum_web_12" translatable="false">http://www.imprimerie.lyon.fr/imprimerie/</string>
    <string name="museum_web_13" translatable="false">http://www.museeurbaintonygarnier.com/</string>
    <string name="museum_web_14" translatable="false">https://www.museeminiatureetcinema.fr/</string>
    <string name="patrimony_web_01" translatable="false">https://www.lyon-france.com/Je-decouvre-Lyon/Sites-et-monuments/Antique/Amphitheatre-des-Trois-Gaules</string>
    <string name="patrimony_web_02" translatable="false">http://www.eiffageconstruction.com/metiers/realisations/reconversion-grand-hotel-dieu-lyon</string>
    <string name="patrimony_web_03" translatable="false">https://www.lyon-france.com/Je-decouvre-Lyon/Sites-et-monuments/Sites-et-monuments-remarquables/La-Tour-Metallique</string>
    <string name="patrimony_web_04" translatable="false">http://www.lyon-visite.info/vieux-lyon/</string>
    <string name="patrimony_web_05" translatable="false">http://www.patrimoine-lyon.org/la-colline-de-la-croix-rousse</string>
    <string name="patrimony_web_06" translatable="false">https://fr.wikipedia.org/wiki/Primatiale_Saint-Jean_de_Lyon</string>
    <string name="patrimony_web_07" translatable="false">https://fr.wikipedia.org/wiki/%C3%89glise_Saint-Georges_de_Lyon</string>
    <string name="patrimony_web_08" translatable="false">http://www.fourviere.org/</string>
    <string name="patrimony_web_09" translatable="false">https://fr.wikipedia.org/wiki/Temple_du_Change</string>
    <string name="patrimony_web_10" translatable="false">https://fr.wikipedia.org/wiki/%C3%89glise_Saint-Nizier_de_Lyon</string>
    <string name="patrimony_web_11" translatable="false">http://www.patrimoine-lyon.org/la-presqu-ile/centre-ville-2/la-place-bellecour</string>
    <string name="patrimony_web_12" translatable="false">http://www.memorial-montluc.fr/</string>
    <string name="patrimony_web_13" translatable="false">https://www.lyon.fr/lieu/moderne-17eme-18eme/hotel-de-ville-de-lyon</string>
    <string name="patrimony_web_14" translatable="false">https://www.lyon-france.com/Je-decouvre-Lyon/Sites-et-monuments/Sites-et-monuments-remarquables/La-Fontaine-Bartholdi</string>
    <string name="patrimony_web_15" translatable="false">http://www.opera-lyon.com/fr</string>
    <string name="patrimony_web_16" translatable="false">http://www.visitelyon.fr/murs-peints/mur,des,canuts/mur,des,canuts.php</string>
    <string name="patrimony_web_17" translatable="false">http://www.visitelyon.fr/murs-lyonnais.php</string>

    <!--Specific java strings not to be translated-->
    <string name="java_title_data" translatable="false">TitleData</string>
    <string name="java_web_link_data" translatable="false">WebLinkData</string>

</resources>